--- a/assessment_selector_COMPLETE.html
+++ b/assessment_selector_COMPLETE.html
@@ -499,13 +499,15 @@
             <!-- SCREEN 0: Title -->
             <div class="screen active" data-screen-id="title">
                 <div class="hero">
-                    <h1>Select your Objective Assessments</h1>
-                    <p>By Dr Neil Tuttle, PhD, SFHEA, for the<br>
-                    <a href="https://www.griffith.edu.au/study/degrees/master-of-musculoskeletal-and-sports-physiotherapy-5727" target="_blank">Master of Musculoskeletal and Sports Physiotherapy</a></p>
+    <h1>Select your Objective Assessments</h1>
+        <p>This resource has been adapted using AI.<br>
+            Original module created by Dr Neil Tuttle (PhD, SFHEA) for the<br>
+            Master of Musculoskeletal and Sports Physiotherapy</p>
+</div>
                 </div>
                 <div class="instructions">
-                    <p><strong>Welcome to the Assessment Technique Selection Tool</strong></p>
-                    <p>This interactive tool helps you build a customized physical assessment plan for your patient based on their symptoms and clinical presentation.</p>
+                    <p><strong>Welcome to the Objective Examination Planning Tool</strong></p>
+                    <p>This interactive tool helps you build a customised physical assessment plan for your patient based on their symptoms and clinical presentation.</p>
                     <p><strong>How to use this tool:</strong></p>
                     <ul>
                         <li>Navigate through each assessment category using the NEXT and PREV buttons</li>
