--- a/assessment_selector_COMPLETE.html
+++ b/assessment_selector_COMPLETE.html
@@ -501,8 +501,8 @@
                 <div class="hero">
     <h1>Select your Objective Assessments</h1>
         <p>This resource has been adapted using AI.<br>
-            Original module created by Dr Neil Tuttle (PhD, SFHEA) for the<br>
-            Master of Musculoskeletal and Sports Physiotherapy</p>
+            Original resrouce created by Dr Neil Tuttle (PhD, SFHEA)<br>
+            for the Master of Musculoskeletal and Sports Physiotherapy</p>
 </div>
                 </div>
                 <div class="instructions">
