--- a/index.html
+++ b/index.html
@@ -461,9 +461,7 @@
     <div class="logo-container">
         <img src="griffith-logo.png" alt="Griffith University Logo" class="logo-img">
     </div>
-</div>
-        </div>
-        
+</div>        
         <div class="progress-container">
             <div class="progress-bar" id="progressBar"></div>
         </div>
@@ -474,7 +472,7 @@
                 <div class="hero">
     <h1>Select your Objective Assessments</h1>
         <p>This resource has been adapted using AI.<br>
-            Original resrouce created by Dr Neil Tuttle (PhD, SFHEA)<br>
+            Original resource created by Dr Neil Tuttle (PhD, SFHEA)<br>
             for the Master of Musculoskeletal and Sports Physiotherapy</p>
 </div>
                 </div>
@@ -2619,7 +2617,7 @@
             <button class="btn btn-primary" id="nextBtn" onclick="navigate(1)">NEXT ►</button>
         </div>
     </div>
-
+</div>
     <script>
         // Navigation State
         let screenSequence = [];
