--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0;      /* Removed the gap */
+    margin-top: 30px;      /* Removed the gap */
     padding: 20px 40px; /* Matches content padding */
     border-top: 1px solid #ddd;
 }
@@ -479,7 +479,6 @@
         <p>This resource has been adapted using AI.<br>
             Original resource created by Dr Neil Tuttle (PhD, SFHEA)<br>
             for the Master of Musculoskeletal and Sports Physiotherapy</p>
-</div>
                 </div>
                 <div class="instructions">
                     <p><strong>Welcome to the Objective Examination Planning Tool</strong></p>
@@ -2604,7 +2603,6 @@
                 <div style="text-align: center; margin-top: 20px;">
                     <p style="margin-bottom: 15px;"><strong>To save your selections:</strong></p>
                     <button class="btn-generate" onclick="downloadReport()">Download as Text File</button>
-                    <button class="btn-generate" onclick="window.print()" style="background-color: #4A90E2; margin-left: 15px;">Print or Save as PDF</button>
                 </div>
             </div>
 
